--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
       <a class="nav-item nav-link active mx-5" href="about.html">About us <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="why.html">Why it works</a>
       <a class="nav-item nav-link mx-5" href="join.html">Join us</a>
+      <a class="nav-item nav-link" href="design.html">Design justification</a>
     </div>
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
