--- a/about.html
+++ b/about.html
@@ -29,6 +29,46 @@
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
 
+  <div class="jumbotron jumbotron-fluid ">
+  <div class="container">
+    <h1 class="display-4">About us</h1>
+    <p class="lead">Trance is a brand that stands for finding peace and quiet. Trance is one of the very first brands that offer a product that focuses on stress relief and stress prevention in the way that we do. With a combined 80 years of experience we offer so much more than just an app, we offer you the feel of relaxation. </p>
+  </div>
+</div>
+	  
+ <section class="container"> 
+  <div class="row">
+    <div class="col-md-6"> 
+	 <h3>Our Mission </h3>
+	 <p>Trance </p>
+     </div> 
+	<div class="col-md-6"> 
+	 <h3>Our Vision </h3>
+	<p>“In a world full of busy lives and stressed out people, we believe that there is nothing more important than finding peace and quiet to calm down. Because only when we are relaxed we are our best selves.” </p>
+     </div>
+	</div>	
+  </section>
+	  
+<section class="container"> 
+  <div class="row mt-5">
+	 <div class="col-12 text-center mb-3"> 
+	  <h2>Testimonials </h2> </div>
+    
+	 <div class="col-md-4"> 
+	  <h3>Anja de Vries </h3>
+	 
+     </div> 
+	 <div class="col-md-4"> 
+	  <h3>Susan Vermeer </h3>
+	 
+     </div>
+	 <div class="col-md-4"> 
+	  <h3>Peter Jansen </h3>
+	 This product really is insanely good.
+     </div>
+	</div>
+  </section>
+	  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
