--- a/index.html
+++ b/index.html
@@ -28,7 +28,48 @@
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
-
+	  
+	  <div class="container-fluid">
+  <div class="row mt-3 mb-5">
+    <div class="col-md-4 p-0">
+      <video src="images/trance.mp4" controls>
+       Your browser does not support the video.
+      </video>
+    </div>
+    <div class="col-md-8">
+      <h1> Introduction </h1>
+	<p>Trance has been founded in 2020 by four International Media and Entertainment students. The brand is all about finding peace and quiet in this busy world. The way that we as a brand would like to start this progress is by using our app. This app consists of 3 different features. Through extensive research and multiple tests, we found that the 3 features that are included in the app are highly effective for stress prevention and stress relief. </p>
+    </div>
+  </div>
+	  </div>
+	  
+	 <main class="container"> 
+	  <div class="row">
+	    <div class="col-md-2 p-0">
+	       <img alt="Feature 1" class="img-fluid" src="images/sounds.jpg">
+			
+	</div>
+		  <div class="col-md-2"> 
+			  <h2>Relaxing sounds</h2>
+			  By listening to the relaxing sounds, you can really take your mind of the stressful matters and calm down.
+		  </div>
+		  <div class="col-md-2 p-0"> 
+			  <img alt="Feature 2" class="img-fluid" src="images/podcast.jpg">
+		  </div>
+		  <div class="col-md-2"> 
+			  <h2>Podcast</h2>
+			  While listening to this podcast you can close your eyes and just take some relaxing time for yourself. This podcast will provide a calm setting.
+		  </div>
+		  <div class="col-md-2 p-0"> 
+			  <img alt="Feature 3" class="img-fluid" src="images/column.jpg">
+		  </div>
+		  <div class="col-md-2"> 
+			  <h2>Advice column </h2>
+			  The advice column provides stories of experts about how to prevent stress and stories of other users on their experiences.
+		  </div>
+	  </div>
+  </main>
+	  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
