--- a/about.html
+++ b/about.html
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">  
     <title>Trance</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light my-navbar">
+	  <div class="mynav">
+  <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="index.html">
 	  <img alt="Trance logo" src="images/logo klein.png" height="65"> 
   </a> <span class="name pull-left">Trance </span>
@@ -28,48 +30,73 @@
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
-
-  <div class="jumbotron jumbotron-fluid ">
-  <div class="container">
-    <h1 class="display-4">About us</h1>
-    <p class="lead">Trance is a brand that stands for finding peace and quiet. Trance is one of the very first brands that offer a product that focuses on stress relief and stress prevention in the way that we do. With a combined 80 years of experience we offer so much more than just an app, we offer you the feel of relaxation. </p>
+</div>
+  <div class="jumbotron jumbotron-fluid">
+  <div class="about container">
+    <h1 class="abouts display-4">About us</h1>
+    <p class="lead">Trance is a brand that stands for finding peace and quiet. Trance is one of the very first brands that offers a product that focuses on stress relief and stress prevention in the way that we do. With a combined 80 years of experience we offer so much more than just an app, we offer you the feel of relaxation. </p>
   </div>
 </div>
 	  
  <section class="container"> 
   <div class="row">
-    <div class="col-md-6"> 
+    <div class="mission col-md-6 col-lg-5"> 
 	 <h3>Our Mission </h3>
 	 <p>Trance </p>
      </div> 
-	<div class="col-md-6"> 
+	<div class="vision col-md-4 ml-5 col-lg-6"> 
 	 <h3>Our Vision </h3>
 	<p>“In a world full of busy lives and stressed out people, we believe that there is nothing more important than finding peace and quiet to calm down. Because only when we are relaxed we are our best selves.” </p>
      </div>
 	</div>	
   </section>
 	  
-<section class="container"> 
+<section class="testimonials container-fluid"> 
   <div class="row mt-5">
 	 <div class="col-12 text-center mb-3"> 
 	  <h2>Testimonials </h2> </div>
     
-	 <div class="col-md-4"> 
+	 <div class="anja col-md-4"> 
 	  <h3>Anja de Vries </h3>
-	 
+	 My youngest daughter recommended this app to me and I am very happy that she did. The first time I tried it, I completely saw it's value. My personal favorite feature is the advice column, just reading other people's experiences and expert advice on topics of stress prevention and stress relief is very useful to me.
      </div> 
-	 <div class="col-md-4"> 
+	 <div class="susan col-md-4"> 
 	  <h3>Susan Vermeer </h3>
-	 
+	 At first I was a bit sceptical about the app and the concept. However, after a couple of days I couldn't live without it. The relaxing sounds make me feel very calm, the podcast really helped me understanding the true meaning of meditation and the advice column is very active and helpful to read.
      </div>
-	 <div class="col-md-4"> 
+	 <div class="peter col-md-4"> 
 	  <h3>Peter Jansen </h3>
-	 This product really is insanely good.
+	 This product really is insanely good. I have tried multiple other ways to relax till this point but this is the only one that really worked for me. The amount of times this app has helped me to relax is unbelievable. I could recommend this app to anyone who struggles with stress in their daily lives.
      </div>
 	</div>
   </section>
 	  
-    <!-- Optional JavaScript -->
+	
+<footer
+	class="container-fluid"> 
+  <div class="row mt-5">
+    <div class="col-md-3">
+	<a href="https://www.facebook.com/Trance-104238977858862/">
+    <img class="logos" alt="Facebook" src="images/facebook-icon.png">
+    </a>
+	 </div>
+	   <div class="col-md-3">
+	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
+    <img class="logos" alt="Youtube" src="images/youtube.png">
+    </a>
+	 </div>
+    <div class="col-md-3">
+	<a href="">
+    <img class="logos" alt="Instagram" src="images/instagram.png">
+    </a>
+	 </div>
+	</div>
+</footer>
+	  
+	  
+	  
+	  
+  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
