--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <title>Trance</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light my-navbar">
+ <div class="mynav">
+  <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="index.html">
 	  <img alt="Trance logo" src="images/logo klein.png" height="65"> 
   </a> <span class="name pull-left">Trance </span>
@@ -28,8 +30,8 @@
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
-	  
-	  <div class="container-fluid">
+</div>  
+	  <div class="intro container-fluid">
   <div class="row mt-3 mb-5">
     <div class="col-md-4 p-0">
       <video src="images/trance.mp4" controls>
@@ -43,7 +45,7 @@
   </div>
 	  </div>
 	  
-	 <main class="container"> 
+	 <main class="features container"> 
 	  <div class="row">
 	    <div class="col-md-2 p-0">
 	       <img alt="Feature 1" class="img-fluid" src="images/sounds.jpg">
@@ -51,24 +53,45 @@
 	</div>
 		  <div class="col-md-2"> 
 			  <h2>Relaxing sounds</h2>
-			  By listening to the relaxing sounds, you can really take your mind of the stressful matters and calm down.
+			  <p>By listening to the relaxing sounds, you can really take your mind of the stressful matters and calm down. </p>
 		  </div>
 		  <div class="col-md-2 p-0"> 
 			  <img alt="Feature 2" class="img-fluid" src="images/podcast.jpg">
 		  </div>
 		  <div class="col-md-2"> 
 			  <h2>Podcast</h2>
-			  While listening to this podcast you can close your eyes and just take some relaxing time for yourself. This podcast will provide a calm setting.
+			  <p>While listening to this podcast you can close your eyes and just take some relaxing time for yourself. This podcast will provide a calm setting.</p>
 		  </div>
 		  <div class="col-md-2 p-0"> 
 			  <img alt="Feature 3" class="img-fluid" src="images/column.jpg">
 		  </div>
 		  <div class="col-md-2"> 
 			  <h2>Advice column </h2>
-			  The advice column provides stories of experts about how to prevent stress and stories of other users on their experiences.
+			  <p>The advice column provides stories of experts about how to prevent stress and stories of other users on their experiences.</p>
 		  </div>
 	  </div>
   </main>
+	  
+ <footer
+	class="container-fluid"> 
+  <div class="row mt-5">
+    <div class="col-md-3">
+	<a href="https://www.facebook.com/Trance-104238977858862/">
+    <img class="logos" alt="Facebook" src="images/facebook-icon.png">
+    </a>
+	 </div>
+	   <div class="col-md-3">
+	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
+    <img class="logos" alt="Youtube" src="images/youtube.png">
+    </a>
+	 </div>
+	  <div class="col-md-3">
+	<a href="">
+    <img class="logos" alt="Instagram" src="images/instagram.png">
+    </a>
+	 </div>
+	</div>
+</footer>
 	  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
