--- a/design.html
+++ b/design.html
@@ -8,9 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet"> 
     <title>Trance</title>
   </head>
   <body>
+<div class="mynav">
   <nav class="navbar navbar-expand-lg navbar-light my-navbar">
   <a class="navbar-brand" href="index.html">
 	  <img alt="Trance logo" src="images/logo klein.png" height="65"> 
@@ -28,7 +30,7 @@
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
-
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
