--- a/why.html
+++ b/why.html
@@ -8,9 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet"> 
     <title>Trance</title>
   </head>
   <body>
+<div class="mynav">
   <nav class="navbar navbar-expand-lg navbar-light my-navbar">
   <a class="navbar-brand" href="index.html">
 	  <img alt="Trance logo" src="images/logo klein.png" height="65"> 
@@ -28,7 +30,43 @@
   </div>
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
-
+</div>
+	  
+<section class="container"> 
+  <div class="row mt-4">
+    <div class="mission col-md-4 mx-5"> 
+	 <h3>Why it works </h3>
+	 <p>Trance </p>
+     </div> 
+	<div class="vision col-md-6"> 
+	 <h3>Benefits of features </h3>
+	<p>Trance </p>
+     </div>
+	</div>	
+  </section>
+	  
+<footer
+	class="container-fluid"> 
+  <div class="row mt-5">
+    <div class="col-md-3">
+	<a href="https://www.facebook.com/Trance-104238977858862/">
+    <img class="logos" alt="Facebook" src="images/facebook-icon.png">
+    </a>
+	 </div>
+	   <div class="col-md-3">
+	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
+    <img class="logos" alt="Youtube" src="images/youtube.png">
+    </a>
+	 </div>
+	  <div class="col-md-3">
+	<a href="">
+    <img class="logos" alt="Instagram" src="images/instagram.png">
+    </a>
+	 </div>
+	</div>
+</footer>
+	  
+	  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
