--- a/why.html
+++ b/why.html
@@ -32,18 +32,49 @@
 </nav>
 </div>
 	  
-<section class="container"> 
+	  <div class="container">
+  <div class="row justify-content-start mt-5">
+    <div class="benefits col-md-6">
+		<h3>Why it works</h3>
+		<p>We believe that taking some more me-time is an important thing in life and we want to help you accomplish that with this app. This app works because of the high amount of research that was conducted before creating this app. It is completely based on scientific facts that will help you in your progress towards a more relaxing lifestyle. The features in the app are varied enough to satisfy all the needs of all of our customers. Next to that we still have a big group of stress prevention and stress relief experts assisting us with the creation of new content.  </p>
+    </div>
+	   <div class="col-md-6 p-0">
+      <img class="img-fluid" alt="sky" src="images/sky.jpeg">
+    </div>
+  </div>
+  <div class="row justify-content-end">
+	  <div class="col-md-6 p-0">
+      <img class="benefits img-fluid" alt="sky" src="images/navbardos.jpeg">
+      </div>
+	  <div class="benefit col-md-6">
+	  <h3>Benefits of the features</h3>
+      <p>The features that are included in out app are: Relaxing sounds that you can listen to, a podcast that helps you meditating and an advice column where people can share their stories on how to prevent and deal with stress. By listening to the relaxing sounds, you can really take your mind of the stressful matters and calm down. While listening to the podcast you can close your eyes and just take some relaxing time for yourself. This podcast will provide a calm setting for you to really get back to a calm state of mind. The advice column feature provides stories of experts about how to prevent stress and stories of other users on their experiences. By reading this you get advice and tips and tricks on how you can prevent stress that you can apply in your own daily life. </p>
+    </div>
+  </div>
+ </div>
+	  
+	<section class="facts container"> 
   <div class="row mt-4">
-    <div class="mission col-md-4 mx-5"> 
-	 <h3>Why it works </h3>
-	 <p>Trance </p>
-     </div> 
-	<div class="vision col-md-6"> 
-	 <h3>Benefits of features </h3>
-	<p>Trance </p>
+	<div class="col-md-12"> 
+	<h1>Scientific facts </h1>
+     </div>
+	</div>
+	  </section>
+	  <section class="facts container"> 
+  <div class="row">
+	<div class="col-md-4"> 
+	<p>Fact 1: <br /> Once you settle on a nature sound you find pleasant, Gould van Praag says it may also help improve your focus and concentration. In the study, participants performed best at "attention tasks" when listening to sounds that were considered familiar, compared with unfamiliar ones. “I think this supports the importance of finding an environment or sound machine that is right for the individual,” says Gould van Praag. </p>
+     </div>
+	  <div class="col-md-4"> 
+	<p>Fact 2: <br /> One study including over 3,500 adults showed that it lives up to its reputation for stress reduction, In this eight-week study, a meditation style called "mindfulness meditation" reduced the inflammation response caused by stress. Another study in nearly 1,300 adults demonstrated that meditation may decrease stress. Notably, this effect was strongest in individuals with the highest levels of stress </p>
+     </div>
+	  <div class="col-md-4"> 
+	<p>Fact 3: <br /> Science has proven that the benefits of meditation are too good to ignore. And while we don’t need to meditate daily to experience its positive effect on your health and happiness, studies have shown that we can unlock even more benefits when we meditate for consecutive days. When we meditate, we can enhance our focus and decision-making and lessen our feelings of fear and stress.</p>
      </div>
 	</div>	
   </section>
+	  
+	  
 	  
 <footer
 	class="container-fluid"> 
