changes to footer
changed the footer and layout

--- a/design.html
+++ b/design.html
@@ -31,6 +31,32 @@
 	  <a href="https://www.apple.com/ios/app-store/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Download</a>
 </nav>
 </div>
+	  
+<footer
+	class="container-fluid"> 
+  <div class="row mt-5">
+	<div class="footertext col-md-6 text-center"> 
+	 <img class="logos" alt="Facebook" src="images/white.png">
+	</div>
+    <div class="col-md-2 text-right">
+	<a href="https://www.facebook.com/Trance-104238977858862/">
+    <img class="logos" alt="Facebook" src="images/facebook-icon.png">
+    </a>
+	 </div>
+	   <div class="col-md-2 text-right">
+	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
+    <img class="logos" alt="Youtube" src="images/yt.png">
+    </a>
+	 </div>
+	  <div class="col-md-2 text-right">
+	<a href="https://www.instagram.com/trancebrand1/?hl=nl">
+    <img class="logos" alt="Instagram" src="images/insta.png">
+    </a>
+	 </div>
+	</div>
+</footer>
+	  
+	  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.4.1.slim.min.js"></script>
