--- a/index.html
+++ b/index.html
@@ -75,19 +75,22 @@
  <footer
 	class="container-fluid"> 
   <div class="row mt-5">
-    <div class="col-md-3">
+	<div class="footertext col-md-6 text-center"> 
+	 <img class="logos" alt="Facebook" src="images/white.png">
+	</div>
+    <div class="col-md-2 text-right">
 	<a href="https://www.facebook.com/Trance-104238977858862/">
     <img class="logos" alt="Facebook" src="images/facebook-icon.png">
     </a>
 	 </div>
-	   <div class="col-md-3">
+	   <div class="col-md-2 text-right">
 	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
-    <img class="logos" alt="Youtube" src="images/youtube.png">
+    <img class="logos" alt="Youtube" src="images/yt.png">
     </a>
 	 </div>
-	  <div class="col-md-3">
-	<a href="">
-    <img class="logos" alt="Instagram" src="images/instagram.png">
+	  <div class="col-md-2 text-right">
+	<a href="https://www.instagram.com/trancebrand1/?hl=nl">
+    <img class="logos" alt="Instagram" src="images/insta.png">
     </a>
 	 </div>
 	</div>
