--- a/why.html
+++ b/why.html
@@ -62,13 +62,13 @@
 	  </section>
 	  <section class="facts container"> 
   <div class="row">
-	<div class="col-md-4"> 
+	<div class="line col-md-4"> 
 	<p>Fact 1: <br /> Once you settle on a nature sound you find pleasant, Gould van Praag says it may also help improve your focus and concentration. In the study, participants performed best at "attention tasks" when listening to sounds that were considered familiar, compared with unfamiliar ones. “I think this supports the importance of finding an environment or sound machine that is right for the individual,” says Gould van Praag. </p>
      </div>
-	  <div class="col-md-4"> 
+	  <div class="line col-md-4"> 
 	<p>Fact 2: <br /> One study including over 3,500 adults showed that it lives up to its reputation for stress reduction, In this eight-week study, a meditation style called "mindfulness meditation" reduced the inflammation response caused by stress. Another study in nearly 1,300 adults demonstrated that meditation may decrease stress. Notably, this effect was strongest in individuals with the highest levels of stress </p>
      </div>
-	  <div class="col-md-4"> 
+	  <div class="line col-md-4"> 
 	<p>Fact 3: <br /> Science has proven that the benefits of meditation are too good to ignore. And while we don’t need to meditate daily to experience its positive effect on your health and happiness, studies have shown that we can unlock even more benefits when we meditate for consecutive days. When we meditate, we can enhance our focus and decision-making and lessen our feelings of fear and stress.</p>
      </div>
 	</div>	
@@ -79,19 +79,22 @@
 <footer
 	class="container-fluid"> 
   <div class="row mt-5">
-    <div class="col-md-3">
+	<div class="footertext col-md-6 text-center"> 
+	 <img class="logos" alt="Facebook" src="images/white.png">
+	</div>
+    <div class="col-md-2 text-right">
 	<a href="https://www.facebook.com/Trance-104238977858862/">
     <img class="logos" alt="Facebook" src="images/facebook-icon.png">
     </a>
 	 </div>
-	   <div class="col-md-3">
+	   <div class="col-md-2 text-right">
 	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
-    <img class="logos" alt="Youtube" src="images/youtube.png">
+    <img class="logos" alt="Youtube" src="images/yt.png">
     </a>
 	 </div>
-	  <div class="col-md-3">
-	<a href="">
-    <img class="logos" alt="Instagram" src="images/instagram.png">
+	  <div class="col-md-2 text-right">
+	<a href="https://www.instagram.com/trancebrand1/?hl=nl">
+    <img class="logos" alt="Instagram" src="images/insta.png">
     </a>
 	 </div>
 	</div>
