--- a/design.html
+++ b/design.html
@@ -32,6 +32,24 @@
 </nav>
 </div>
 	  
+<section class="back container"> 
+	  <div class="row mt-4 mb-4">
+	  <div class="col-md-12"> 
+			  <h2>Wireframes</h2>
+		  </div>
+		  </div>
+	  </section> 
+
+	  <section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-6"> 
+			  <h3>Home page</h3>
+		<img class="img-fluid" alt="homepage" src="images/">
+		  </div>
+		  </div>
+	  </section> 
+
+	  
 <footer
 	class="container-fluid"> 
   <div class="row mt-5">
