--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
   </div>
 	  </div>
 	  
-	 <main class="features container"> 
+	<section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-12 text-center"> 
+			  <h2>Our app</h2>
+			  <p>We help to get your me-time back.</p>
+		  </div>
+		  </div>
+	  </section>
+	  
+	 <main class="back container"> 
 	  <div class="row">
 	    <div class="col-md-2 p-0">
 	       <img alt="Feature 1" class="img-fluid" src="images/sounds.jpg">
