--- a/why.html
+++ b/why.html
@@ -34,7 +34,7 @@
 	  
 	  <div class="container">
   <div class="row justify-content-start mt-5">
-    <div class="benefits col-md-6">
+    <div class="back col-md-6">
 		<h3>Why it works</h3>
 		<p>We believe that taking some more me-time is an important thing in life and we want to help you accomplish that with this app. This app works because of the high amount of research that was conducted before creating this app. It is completely based on scientific facts that will help you in your progress towards a more relaxing lifestyle. The features in the app are varied enough to satisfy all the needs of all of our customers. Next to that we still have a big group of stress prevention and stress relief experts assisting us with the creation of new content.  </p>
     </div>
@@ -44,23 +44,23 @@
   </div>
   <div class="row justify-content-end">
 	  <div class="col-md-6 p-0">
-      <img class="benefits img-fluid" alt="sky" src="images/navbardos.jpeg">
+      <img class="back img-fluid" alt="sky" src="images/navbardos.jpeg">
       </div>
-	  <div class="benefit col-md-6">
+	  <div class="back col-md-6">
 	  <h3>Benefits of the features</h3>
       <p>The features that are included in out app are: Relaxing sounds that you can listen to, a podcast that helps you meditating and an advice column where people can share their stories on how to prevent and deal with stress. By listening to the relaxing sounds, you can really take your mind of the stressful matters and calm down. While listening to the podcast you can close your eyes and just take some relaxing time for yourself. This podcast will provide a calm setting for you to really get back to a calm state of mind. The advice column feature provides stories of experts about how to prevent stress and stories of other users on their experiences. By reading this you get advice and tips and tricks on how you can prevent stress that you can apply in your own daily life. </p>
     </div>
   </div>
  </div>
 	  
-	<section class="facts container"> 
+	<section class="back container"> 
   <div class="row mt-4">
 	<div class="col-md-12"> 
 	<h1>Scientific facts </h1>
      </div>
 	</div>
 	  </section>
-	  <section class="facts container"> 
+	  <section class="back container"> 
   <div class="row">
 	<div class="line col-md-4"> 
 	<p>Fact 1: <br /> Once you settle on a nature sound you find pleasant, Gould van Praag says it may also help improve your focus and concentration. In the study, participants performed best at "attention tasks" when listening to sounds that were considered familiar, compared with unfamiliar ones. “I think this supports the importance of finding an environment or sound machine that is right for the individual,” says Gould van Praag. </p>
@@ -73,7 +73,6 @@
      </div>
 	</div>	
   </section>
-	  
 	  
 	  
 <footer
