--- a/design.html
+++ b/design.html
@@ -44,11 +44,60 @@
 	  <div class="row mb-4">
 	  <div class="col-md-6"> 
 			  <h3>Home page</h3>
-		<img class="img-fluid" alt="homepage" src="images/">
+		<img class="img-fluid" alt="homepage" src="images/wfhomepages.jpg">
+		  </div>
+		  <div class="col-md-6"> 
+			  <h3>About page</h3>
+		<img class="img-fluid" alt="about" src="images/wfabout.jpg">
 		  </div>
 		  </div>
 	  </section> 
 
+	  <section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-6"> 
+			  <h3>Why it works page</h3>
+		<img class="img-fluid" alt="why it works" src="images/wfwhy.jpg">
+		  </div>
+		  <div class="col-md-6"> 
+			  <h3>Join us page</h3>
+		<img class="img-fluid" alt="join us" src="images/wfjoin.jpg">
+		  </div>
+		  </div>
+	  </section> 
+	  
+	  <section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-12 text-center"> 
+	  <h3>Subscribed page</h3>
+		<img class="subscribe img-fluid" alt="subscribed" src="images/wfsubscribed.jpg">
+		 </div>
+		 </div>
+	  </section>
+	  
+	  <section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-6"> 
+		    <h3>Flow diagram</h3>
+		 <img class="img-fluid" alt="flow diagram" src="images/flowdiagram.jpg">
+		  </div>
+		  <div class="col-md-6"> 
+			<h3>Design justification </h3>
+			<p>Fonts: <br />For the title we have used to font “Montserrat”. Since Trance is a brand that stands for finding peace and quiet, we made the decision to use a simple font that is readable and easy on the eyes, while still being aesthetically pleasing.<br /> <br />Colors: #D6E9FA #FFFFFF <br /> We chose to use a color palette consisting of only two colors because we wanted to make the website feel very minimalistic. Our goal is to make people feel relaxed and calm and this is best achieved by having the least amount of clutter and distractions possible. The colors we used are light blue and white. This is because when we think of relaxation and no-stress environments, we think of sitting next to the sea or looking up at the sky. Blue is an aspect both these environments have in common which is why this is the color we used. The hue of the blue is very light and pastel to not make it too heavy on the eyes, since, after all, our goal is to relax the consumers.<br /> These colors represent our brand and were therefore also present in the color palet that was included in our brand road map, the logo that we created in this brand road map also consisted out of these colors and these colors can be found in almost all aspects of Trance. </p>
+		  </div>
+		  </div>
+	  </section>
+	  
+	  <section class="back container"> 
+	  <div class="row mb-4">
+	  <div class="col-md-12"> 
+	  <h3>User testing report</h3>
+		  <p>At first, we conducted two user tests based on our paper prototype during class. The task for the two participants was to subscribe to our newsletter via our website. Both the participants found this button on the “join us” page pretty quick and didn’t experience problems with the navigation of the website. This was mostly because they were used to this kind of navigation from other already existing websites. Both of them did recommend we added a footer to our website.<br /> <br /> After our website was almost finished, we asked 4 more people to participate in a user test. This time with the actual website. These participants were asked to first read the testimonials and then check out our social media pages. All 4 of them did find these things without any real difficulty and they liked that the social media accounts were also linked in our footer. The only recommendation that we got was to maybe increase the size of the download button in our navigation bar. </p>
+		 </div>
+		 </div>
+	  </section>
+	  
+	  
 	  
 <footer
 	class="container-fluid"> 
