--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <div class="row">
     <div class="back col-md-6 col-lg-5"> 
 	 <h3>Our Mission </h3>
-	 <p>Trance </p>
+	 <p>Trance is a brand that stands for relaxation. Therefore our mission is to help as much people get their me-time back. Whether this is by helping them via our social media or through our app. </p>
      </div> 
 	<div class="back col-md-4 ml-5 col-lg-6"> 
 	 <h3>Our Vision </h3>
