--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	  <div class="row mb-4">
 	  <div class="col-md-12 text-center"> 
 			  <h2>Our app</h2>
-			  <p>We help to get your me-time back.</p>
+			  <p>"We help to get your me-time back."</p>
 		  </div>
 		  </div>
 	  </section>
