--- a/join.html
+++ b/join.html
@@ -105,7 +105,7 @@
 	 </div>
 	   <div class="col-md-2 text-right">
 	<a href="https://www.youtube.com/channel/UCDNm-xc0fVOVy2tZrp_Tpyg">
-    <img class="logos" alt="Youtube" src="images/yt.png">
+    <img class="logos" alt="Youtube" src="images/youtube.png">
     </a>
 	 </div>
 	  <div class="col-md-2 text-right">
